--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,10 @@
 name: Release package
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+  push:
+    paths:
+      - 'version.txt'
 
 jobs:
   publish:
@@ -13,7 +15,6 @@ jobs:
     outputs:
       TAG_NAME: ${{ steps.update-files.outputs.handle }}
       REPO_NAME: ${{ steps.update-files.outputs.handle }}
-      UPLOAD_URL: ${{ steps.update-files.outputs.handle }}
 
     steps:
       - name: Checkout
@@ -28,13 +29,21 @@ jobs:
         with:
           node-version: 20
 
+      - name: Get version
+        id: version
+        uses: actions/github-script@0.3.0
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const core = require('@actions/core')
+            const fs = require('fs');
+            const version = fs.readFileSync('${{ github.workspace }}/version.txt', 'utf8')
+            core.setOutput('version', version);
+
       - name: Update files with new version
         id: update-files
         shell: bash
         run: |
-          TAG_NAME=${{ github.event.release.tag_name }}
-          RELEASE_ID=${{ github.event.release.id }}
-          UPLOAD_URL=${{ github.event.release.upload_url }}
           REPO_OWNER=${{ github.repository_owner }}
 
           forward_repo_pattern="${REPO_OWNER}/"
@@ -78,9 +87,7 @@ jobs:
           # update README.md file
           echo "$readme_contents" > README.md
 
-          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_OUTPUT
           echo "REPO_NAME=$REPO_NAME" >> $GITHUB_OUTPUT
-          echo "UPLOAD_URL=$UPLOAD_URL" >> $GITHUB_OUTPUT
 
       - name: Commit files with new version and update tag
         run: |
@@ -88,18 +95,19 @@ jobs:
           git config user.name "$(git log -n 1 --pretty=format:%an)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
-          git commit -m "Update to ${{ steps.update-files.outputs.TAG_NAME }}"
+          git commit -m "Update to v${{ steps.version.outputs.version }}"
           git push -u origin main --force-with-lease --tags || true
+          echo "Committed changes"
 
-          # Delete old tag
-          git tag -d ${{ steps.update-files.outputs.TAG_NAME }} || true
-          git push origin --delete ${{ steps.update-files.outputs.TAG_NAME }} || true
-
-          # Create new tag
-          git tag -a ${{ steps.update-files.outputs.TAG_NAME }} -m "Release ${{ steps.update-files.outputs.TAG_NAME }}" || true
-          git push -u origin main --tags || true
-
-          echo "Committed changes and updated tag to ${{ steps.update-files.outputs.TAG_NAME }}"
+      # Create GitHub release
+      - name: Create ${{ steps.version.outputs.version }} Runner Release
+        uses: actions/create-release@master
+        id: createRelease
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: "v${{ steps.version.outputs.version }}"
+          release_name: "v${{ steps.version.outputs.version }}"
 
       - name: Install aftman dependencies
         uses: ok-nick/setup-aftman@v0.4.2
@@ -125,7 +133,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.update-files.outputs.UPLOAD_URL }}
+          upload_url: ${{ steps.createRelease.outputs.upload_url }}
           asset_path: ${{ steps.update-files.outputs.REPO_NAME }}.rbxl
           asset_name: ${{ steps.update-files.outputs.REPO_NAME }}.rbxl
           asset_content_type: application/octet-stream
