--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dlib",
-  "version": "1.1.14",
+  "version": "",
   "description": "Modules and Libraries for development in Roblox",
   "main": "src/init.luau",
   "scripts": {
