--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,6 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
-    outputs:
-      TAG_NAME: ${{ steps.update-files.outputs.handle }}
-      REPO_NAME: ${{ steps.update-files.outputs.handle }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,31 +35,23 @@ jobs:
             const fs = require('fs');
             const version = fs.readFileSync('${{ github.workspace }}/version.txt', 'utf8')
             core.setOutput('version', version);
+            console.log(version)
 
       - name: Update files with new version
         id: update-files
         shell: bash
         run: |
-          REPO_OWNER=${{ github.repository_owner }}
-
-          forward_repo_pattern="${REPO_OWNER}/"
-          empty_str=""
-          repo=${{github.repository}}
-          REPO_NAME=${repo/${forward_repo_pattern}/${empty_str}}
-
-          goal_version_str=${TAG_NAME#v}
-
           # read wally.toml file
           wally_toml_contents=$(<wally.toml)
 
           # swap out name
           target_name_line=$(echo "$wally_toml_contents" | grep -F "name = ")
-          goal_name_line="name = \"${REPO_OWNER}/${REPO_NAME}\""
+          goal_name_line="name = \"${{github.repository}}\""
           wally_toml_contents="${wally_toml_contents/${target_name_line}/${goal_name_line}}"
 
           # swap out version
           target_version_line=$(echo "$wally_toml_contents" | grep -F "version = ")
-          goal_version_line="version = \"${goal_version_str#v}\""
+          goal_version_line="version = \"${{ steps.version.outputs.version }}\""
           wally_toml_contents="${wally_toml_contents/${target_version_line}/${goal_version_line}}"
 
           # update wally.toml file
@@ -72,7 +60,7 @@ jobs:
           # read package.json file
           default_json_contents=$(<package.json)
           target_json_version_line=$(echo "$default_json_contents" | grep -F "\"version\": ")
-          goal_json_version_line="  \"version\": \"${goal_version_str#v}\","
+          goal_json_version_line="  \"version\": \"${{ steps.version.outputs.version }}\","
           default_json_contents="${default_json_contents/${target_json_version_line}/${goal_json_version_line}}"
 
           # update package.json file
@@ -80,14 +68,12 @@ jobs:
 
           # read README.md file
           readme_contents=$(<README.md)
-          target_readme_version_line=$(echo "$readme_contents" | grep -F "${REPO_NAME} = \"")
-          goal_readme_version_line="${REPO_NAME} = \"${REPO_OWNER}/${REPO_NAME}@${goal_version_str#v}\""
+          target_readme_version_line=$(echo "$readme_contents" | grep -F "${{ github.event.repository.name }} = \"")
+          goal_readme_version_line="${{ github.event.repository.name }} = \"${{github.repository}}@${{ steps.version.outputs.version }}\""
           readme_contents="${readme_contents/${target_readme_version_line}/${goal_readme_version_line}}"
 
           # update README.md file
           echo "$readme_contents" > README.md
-
-          echo "REPO_NAME=$REPO_NAME" >> $GITHUB_OUTPUT
 
       - name: Commit files with new version and update tag
         run: |
@@ -126,7 +112,7 @@ jobs:
           wally publish
 
       - name: Build package place file
-        run: rojo build -o ${{ steps.update-files.outputs.REPO_NAME }}.rbxl build.project.json
+        run: rojo build -o ${{ github.event.repository.name }}.rbxl build.project.json
 
       - name: Upload Roblox level file to release
         uses: actions/upload-release-asset@v1
@@ -134,6 +120,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.createRelease.outputs.upload_url }}
-          asset_path: ${{ steps.update-files.outputs.REPO_NAME }}.rbxl
-          asset_name: ${{ steps.update-files.outputs.REPO_NAME }}.rbxl
+          asset_path: ${{ github.event.repository.name }}.rbxl
+          asset_name: ${{ github.event.repository.name }}.rbxl
           asset_content_type: application/octet-stream
