add date tests, add new totalTime util method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
 	"luau-lsp.sourcemap.rojoProjectFile": "default.project.json",
   "luau-lsp.types.definitionFiles": ["testez.d.lua"],
 
+  "testez-companion.runTestsOnSave": true,
+
   "[lua]": {
 		"editor.defaultFormatter": "EditorConfig.EditorConfig",
 		"editor.formatOnSave": true
