--- a/wally.toml
+++ b/wally.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-include = ["src", "src/**", "wally.toml", "default.project.json"]
-exclude = ["*.spec.luau"]
+include = ["src", "wally.toml", "default.project.json"]
+exclude = ["src/**/*.luau"]
 
 [dependencies]
