--- a/src/wally.toml
+++ b/src/wally.toml
@@ -7,6 +7,6 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 include = ["default.project.json"]
-exclude = ["**/*.spec.luau", "wally.toml"]
+exclude = ["**/*.spec.luau"]
 
 [dependencies]
