--- a/wally.toml
+++ b/wally.toml
@@ -1,12 +1,10 @@
 [package]
 name = "dig1t/dlib"
-version = "1.1.35"
+version = "1.1.31"
 description = "Modules and Libraries for development in Roblox"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-include = ["default.project.json"]
-exclude = ["**/*.spec.luau"]
-
-[dependencies]
+include = ["src", "default.project.json"]
+exclude = ["src/**/*.spec.luau"]
