--- a/aftman.toml
+++ b/aftman.toml
@@ -1,5 +1,6 @@
 [tools]
+luau-lsp = "JohnnyMorganz/luau-lsp@1.28.1"
 rojo = "rojo-rbx/rojo@7.4.0-rc2"
-wally = "UpliftGames/wally@0.3.2"
 selene = "Kampfkarren/selene@0.26.1"
-luau-lsp = "JohnnyMorganz/luau-lsp@1.26.0"
+wally = "UpliftGames/wally@0.3.2"
+wally-package-types = "JohnnyMorganz/wally-package-types@1.3.1"
