--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dlib",
-  "version": "1.2.13",
+  "version": "1.2.14
+",
   "description": "Modules and Libraries for development in Roblox",
   "main": "src/init.luau",
   "scripts": {
