--- a/wally.toml
+++ b/wally.toml
@@ -1,6 +1,7 @@
 [package]
 name = "dig1t/dlib"
-version = "1.2.13"
+version = "1.2.14
+"
 description = "Modules and Libraries for development in Roblox"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
