--- a/wally-template.toml
+++ b/wally-template.toml
@@ -1,10 +1,9 @@
 [package]
-name = "dig1t/dlib"
-version = "1.2.18"
+name = "dig1t/{MODULE}"
+version = "{VERSION}"
 description = "Modules and Libraries for development in Roblox"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-include = ["src", "default.project.json"]
-exclude = ["src/**/*.spec.luau", "src/**/wally.toml", "src/**/version.txt"]
+exclude = ["*.spec.luau", "wally.toml", "version.txt"]
