--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dlib",
   "version": "1.2.18",
-  "description": "Modules and Libraries for development in Roblox",
+  "description": "Module part of the dig1t/dLib repository",
   "main": "src/init.luau",
   "scripts": {
     "build:dependencies": "wally install",
