--- a/src/Palette/wally.toml
+++ b/src/Palette/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/palette"
 version = "1.0.0"
-description = "Modules and Libraries for development in Roblox"
+description = "Module part of the dig1t/dLib repository"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
