--- a/src/Util/wally.toml
+++ b/src/Util/wally.toml
@@ -5,4 +5,4 @@ description = "Module part of the dig1t/dLib repository"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
-exclude = ["*.spec.luau", "wally.toml"]
+exclude = ["*.spec.luau"]
