--- a/aftman.toml
+++ b/aftman.toml
@@ -1,6 +1,8 @@
 [tools]
 luau-lsp = "JohnnyMorganz/luau-lsp@1.28.1"
-rojo = "rojo-rbx/rojo@7.4.0-rc2"
+lune = "filiptibell/lune@0.7.7"
+rojo ="rojo-rbx/rojo@7.4.1"
 selene = "Kampfkarren/selene@0.26.1"
+stylua = "johnnymorganz/stylua@0.20.0"
 wally = "UpliftGames/wally@0.3.2"
 wally-package-types = "JohnnyMorganz/wally-package-types@1.3.1"
