--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,13 +12,16 @@
 
   // "testez-companion.runTestsOnSave": true,
 
+  "editor.defaultFormatter": "EditorConfig.EditorConfig",
+  "editor.formatOnSave": true,
+
   "[lua]": {
-    "editor.defaultFormatter": "EditorConfig.EditorConfig",
+    "editor.defaultFormatter": "JohnnyMorganz.stylua",
     "editor.formatOnSave": true
   },
 
   "[luau]": {
-    "editor.defaultFormatter": "EditorConfig.EditorConfig",
+    "editor.defaultFormatter": "JohnnyMorganz.stylua",
     "editor.formatOnSave": true
   },
 
