--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
     paths:
-      - 'src/*/wally.toml'
+      #- 'src/*/wally.toml' # temporary disabled
+      - '*'
 
 jobs:
   publish:
@@ -28,7 +29,7 @@ jobs:
         uses: ok-nick/setup-aftman@v0.4.2
 
       - name: Install dependencies
-        run: npm run build:dependencies
+        run: npm run build:dependencies-unix
 
       - name: Publish all changes modules to wally
         shell: bash
