math util updates

--- a/src/Util/wally.toml
+++ b/src/Util/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/util"
-version = "1.0.1"
-description = "Module part of the dig1t/dLib repository"
+version = "1.0.2"
+description = "Utility module part of the dig1t/dLib repository"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
