--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "luau-lsp.sourcemap.autogenerate": true,
   "luau-lsp.sourcemap.enabled": true,
   "luau-lsp.sourcemap.rojoProjectFile": "default.project.json",
+  "luau-lsp.diagnostics.strictDatamodelTypes": false,
   "luau-lsp.types.definitionFiles": [
     "testez.d.luau"
   ],
