--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "luau-lsp.sourcemap.enabled": true,
   "luau-lsp.sourcemap.rojoProjectFile": "default.project.json",
   "luau-lsp.diagnostics.strictDatamodelTypes": false,
+  "luau-lsp.sourcemap.includeNonScripts": true,
   "luau-lsp.types.definitionFiles": [
     "testez.d.luau"
   ],
@@ -12,7 +13,7 @@
     "**/_Index/**",
     "*.d.luau"
   ],
-  // "testez-companion.runTestsOnSave": true,
+  "testez-companion.runTestsOnSave": true,
   "editor.defaultFormatter": "EditorConfig.EditorConfig",
   "editor.formatOnSave": true,
   "[luau]": {
