--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "src/init.luau",
   "scripts": {
     "build:dependencies-unix": "find src -type d -exec sh -c 'cd \"{}\" && wally install || true' \\;",
-    "build:dependencies": "wally install",
-    "build:rojo": "rojo build -o dev-build.rbxl build.project.json",
     "build:docs": "moonwave build",
-    "build": "npm run build:dependencies && npm run build:rojo",
-
+    "build": "rojo build -o dev-build.rbxl build.project.json",
     "dev": "npm run build && dev-build.rbxl && npm start",
     "start": "rojo serve build.project.json"
   },
