--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dlib",
+  "name": "roblox-modules",
   "version": "1.2.18",
-  "description": "Module part of the dig1t/dLib repository",
+  "description": "Module part of the dig1t/roblox-modules repository",
   "main": "src/init.luau",
   "scripts": {
     "build:dependencies-unix": "find src -type d -exec sh -c 'cd \"{}\" && wally install || true' \\;",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dig1t/dlib.git"
+    "url": "git+https://github.com/dig1t/roblox-modules.git"
   },
   "author": "dig1t",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/dig1t/dlib/issues"
+    "url": "https://github.com/dig1t/roblox-modules/issues"
   },
-  "homepage": "https://dig1t.github.io/dlib",
+  "homepage": "https://dig1t.github.io/roblox-modules",
   "dependencies": {
     "moonwave": "^1.1.3"
   }
