--- a/src/Maid/wally.toml
+++ b/src/Maid/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dig1t/maid"
-version = "1.0.5"
+version = "1.0.6"
 description = "Module part of the dig1t/roblox-modules repository"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
@@ -8,4 +8,4 @@ realm = "shared"
 exclude = ["*.spec.luau"]
 
 [dependencies]
-Util = "dig1t/util@1.0.11"
+Util = "dig1t/util@^1.0"
