--- a/src/ProfileDB/wally.toml
+++ b/src/ProfileDB/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/profiledb"
-version = "1.0.0"
-description = "Module part of the dig1t/roblox-modules repository"
+version = "1.0.1"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
