--- a/src/State/wally.toml
+++ b/src/State/wally.toml
@@ -1,11 +1,11 @@
 [package]
 name = "dig1t/state"
 version = "1.1.2"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/State"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 exclude = ["*.spec.luau"]
 
 [dependencies]
-Util = "dig1t/util@1.0.13"
+Util = "dig1t/util@1.0.14"
