--- a/src/ProfileDB/wally.toml
+++ b/src/ProfileDB/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/profiledb"
 version = "1.0.2"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/ProfileDB"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
@@ -10,4 +10,4 @@ exclude = ["*.spec.luau"]
 [dependencies]
 Maid = "dig1t/maid@1.0.7"
 Signal = "dig1t/signal@1.0.0"
-Util = "dig1t/util@1.0.13"
+Util = "dig1t/util@1.0.14"
