--- a/src/Promise/wally.toml
+++ b/src/Promise/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/promise"
 version = "1.1.3"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/Promise"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
