--- a/src/Ragdoll/wally.toml
+++ b/src/Ragdoll/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/ragdoll"
 version = "1.0.4"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/Ragdoll"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
