--- a/src/Replica/wally.toml
+++ b/src/Replica/wally.toml
@@ -1,14 +1,14 @@
 [package]
 name = "dig1t/replica"
 version = "1.0.2"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/Replica"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 exclude = ["*.spec.luau"]
 
 [dependencies]
-Util = "dig1t/util@1.0.13"
+Util = "dig1t/util@1.0.14"
 Signal = "dig1t/signal@1.0.0"
 Maid = "dig1t/maid@1.0.7"
 t = "osyrisrblx/t@3.1.1"
