--- a/src/Util/wally.toml
+++ b/src/Util/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/util"
-version = "1.0.13"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+version = "1.0.14"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/Util"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
