--- a/src/Weapon/wally.toml
+++ b/src/Weapon/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dig1t/weapon"
 version = "0.0.1"
-description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules"
+description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/Weapon"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
