use signal for state changes

--- a/src/State/wally.toml
+++ b/src/State/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dig1t/state"
-version = "1.1.2"
+version = "1.2.0"
 description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/State"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
@@ -9,3 +9,4 @@ exclude = ["*.spec.luau"]
 
 [dependencies]
 Util = "dig1t/util@1.0.15"
+Signal = "dig1t/signal@1.0.0"
