--- a/src/GamePass/wally.toml
+++ b/src/GamePass/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dig1t/gamepass"
-version = "1.0.8"
+version = "1.0.9"
 description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/GamePass"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
@@ -8,5 +8,5 @@ realm = "shared"
 exclude = ["*.spec.luau"]
 
 [dependencies]
-Cache = "dig1t/cache@^1.0"
-Maid = "dig1t/maid@^1.0"
+Cache = "dig1t/cache@1.0.10"
+Maid = "dig1t/maid@^1.1"
