--- a/src/Badge/wally.toml
+++ b/src/Badge/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dig1t/badge"
-version = "1.0.6"
+version = "1.0.7"
 description = "Module part of the dig1t/roblox-modules repository. Find the API here: https://dig1t.github.io/roblox-modules/api/Badge"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
@@ -9,3 +9,4 @@ exclude = ["*.spec.luau"]
 
 [dependencies]
 Cache = "dig1t/cache@1.0.10"
+Signal = "dig1t/signal@1.0.2"
